Move event schedule below main body, add teaser text about how to attend. also fix table

--- a/static/assets/pages/event/bc25.md
+++ b/static/assets/pages/event/bc25.md
@@ -8,6 +8,14 @@ Once open, visitors can explore the world with friends, try out mods, attend int
 
 ---
 
+## How to Attend
+
+BlanketCon '25 takes place entirely within Minecraft. We're not open yet, but when the modpack is ready you'll be able to download it [on Modrinth](https://modrinth.com/organization/modfest/modpacks).
+
+Then, all you need to do is click "Connect" in the main menu!
+
+---
+
 ## Event Details
 
 |                      |                                                                       |
@@ -20,9 +28,8 @@ Once open, visitors can explore the world with friends, try out mods, attend int
 | Closing Ceremony     | Monday, Apr 28th, 2025 @ 00:00GMT                                     |
 | Who Can Participate? | **Modding project authors,<br/>aspiring talk/panel hosts, and more!** |
 | Who Can Attend?      | **Everyone!**                                                         |
-|                      |                                                                       |
 
-**Read our [BlanketCon Participation Guide](/pages/bcguide) for more info on what you can submit and what to expect.**
+Modders: **read our [BlanketCon Participation Guide](/pages/bcguide) for more info on what you can submit and what to expect.**
 
 ---
 
