convention world block

--- a/static/assets/pages/event/bc25.md
+++ b/static/assets/pages/event/bc25.md
@@ -16,6 +16,26 @@ Then, all you need to do is click "Connect" in the main menu!
 
 ---
 
+## Convention World
+
+<center><img alt="world preview" src="https://cdn.modrinth.com/data/QxJj1BWR/images/b8412b0e903866dc3a71513cf2300bcae029ec74.png" /></center>
+
+**BlanketCon '25 is almost open** - with events running from April 26th through 29th, 2025, and the server staying open over the months following.
+
+**Key Features**:
+- Check out 234 convention "booths" built to show off mods, modpacks, and other modding projects!
+- Explore a vibrant island of castaways that mysteriously migrates across the ocean...
+- Traverse the map by train, car, skates, stopwatches, and much, much more!
+- Find and earn ??? collectible "shards", tracking booth visits, hidden secrets, and tricky challenges!
+- Put sunglasses on a pineapple! (huh?)
+
+<center>
+<img width="50%" alt="closing ceremony screenshot" src="https://cdn.modrinth.com/data/QxJj1BWR/images/90e8501e015370337986b254dbc5db15ffdb6c7e.png"/><br/>
+<i>See you there!</i>
+</center>
+
+---
+
 ## Event Details
 
 |                      |                                                                       |
