--- a/static/assets/pages/event/bc25.md
+++ b/static/assets/pages/event/bc25.md
@@ -10,9 +10,7 @@ Once open, visitors can explore the world with friends, try out mods, attend int
 
 ## How to Attend
 
-BlanketCon '25 takes place entirely within Minecraft. We're not open yet, but when the modpack is ready you'll be able to download it [on Modrinth](https://modrinth.com/organization/modfest/modpacks).
-
-Then, all you need to do is click "Connect" in the main menu!
+BlanketCon '25 takes place entirely within modded Minecraft. Download the pack [on Modrinth](https://modrinth.com/modpack/bc25/) and click "Connect" in the main menu!
 
 ---
 
