More present-tense opening stuff

--- a/static/assets/pages/event/bc25.md
+++ b/static/assets/pages/event/bc25.md
@@ -2,9 +2,9 @@
 
 **BlanketCon is a collaborative event celebrating the art of Minecraft modding!**
 
-At BlanketCon, members of the modding community come together to create a themed world full of booths that showcase their current modding projects, and sign up to host talks and panels that share their expertise.
+At BlanketCon, members of the modding community came together to create a themed world full of booths that showcase their current modding projects, and signed up to host talks and panels tho share their expertise.
 
-Once open, visitors can explore the world with friends, try out mods, attend interesting events, and hang out!
+We are **open!** Visitors can explore the world with friends, try out mods, attend interesting events, or just hang out!
 
 ---
 
@@ -18,7 +18,7 @@ BlanketCon '25 takes place entirely within modded Minecraft. Download the pack [
 
 <center><img alt="world preview" src="https://cdn.modrinth.com/data/QxJj1BWR/images/b8412b0e903866dc3a71513cf2300bcae029ec74.png" /></center>
 
-**BlanketCon '25 is almost open** - with events running from April 26th through 29th, 2025, and the server staying open over the months following.
+**BlanketCon '25 is open!** Events run from April 26th through 29th, 2025, but the server will remain open over the months following.
 
 **Key Features**:
 - Check out 234 convention "booths" built to show off mods, modpacks, and other modding projects!
@@ -28,7 +28,7 @@ BlanketCon '25 takes place entirely within modded Minecraft. Download the pack [
 - Put sunglasses on a pineapple! (huh?)
 
 <center>
-<img width="50%" alt="closing ceremony screenshot" src="https://cdn.modrinth.com/data/QxJj1BWR/images/90e8501e015370337986b254dbc5db15ffdb6c7e.png"/><br/>
+<img width="50%" alt="opening ceremony screenshot" src="https://cdn.modrinth.com/data/QxJj1BWR/images/90e8501e015370337986b254dbc5db15ffdb6c7e.png"/><br/>
 <i>See you there!</i>
 </center>
 
