--- a/static/assets/pages/event/bc25.md
+++ b/static/assets/pages/event/bc25.md
@@ -2,7 +2,7 @@
 
 **BlanketCon is a collaborative event celebrating the art of Minecraft modding!**
 
-At BlanketCon, members of the modding community came together to create a themed world full of booths that showcase their current modding projects, and signed up to host talks and panels tho share their expertise.
+At BlanketCon, members of the modding community came together to create a themed world full of booths that showcase their current modding projects, and signed up to host talks and panels to share their expertise.
 
 We are **open!** Visitors can explore the world with friends, try out mods, attend interesting events, or just hang out!
 
