Add shard count

--- a/static/assets/pages/event/bc25.md
+++ b/static/assets/pages/event/bc25.md
@@ -24,7 +24,7 @@ BlanketCon '25 takes place entirely within modded Minecraft. Download the pack [
 - Check out 234 convention "booths" built to show off mods, modpacks, and other modding projects!
 - Explore a vibrant island of castaways that mysteriously migrates across the ocean...
 - Traverse the map by train, car, skates, stopwatches, and much, much more!
-- Find and earn ??? collectible "shards", tracking booth visits, hidden secrets, and tricky challenges!
+- Find and earn 388 collectible "shards", tracking booth visits, hidden secrets, and tricky challenges!
 - Put sunglasses on a pineapple! (huh?)
 
 <center>
