--- a/static/assets/pages/event/bc25.md
+++ b/static/assets/pages/event/bc25.md
@@ -8,17 +8,15 @@ We are **open!** Visitors can explore the world with friends, try out mods, atte
 
 ---
 
-## How to Attend
+## Recordings
 
-BlanketCon '25 takes place entirely within modded Minecraft. Download the pack [on Modrinth](https://modrinth.com/modpack/bc25/) and click "Connect" in the main menu!
+A playlist of video recordings of BlanketCon '25 is available [on YouTube](https://www.youtube.com/playlist?list=PLpa8FqWIBhBrXtoHiTWjC3qrMKXbfikdH) - with thanks to our A/V volunteers!
 
 ---
 
 ## Convention World
 
-<center><img alt="world preview" src="https://cdn.modrinth.com/data/QxJj1BWR/images/b8412b0e903866dc3a71513cf2300bcae029ec74.png" /></center>
-
-**BlanketCon '25 is open!** Events run from April 26th through 29th, 2025, but the server will remain open over the months following.
+<center><img alt="world preview" src="https://cdn.modrinth.com/data/QxJj1BWR/images/26eebc33bf8e8a6e0dd3323dba509b5c2e81da79.jpeg" /></center>
 
 **Key Features**:
 - Check out 234 convention "booths" built to show off mods, modpacks, and other modding projects!
@@ -28,8 +26,8 @@ BlanketCon '25 takes place entirely within modded Minecraft. Download the pack [
 - Put sunglasses on a pineapple! (huh?)
 
 <center>
-<img width="50%" alt="opening ceremony screenshot" src="https://cdn.modrinth.com/data/QxJj1BWR/images/90e8501e015370337986b254dbc5db15ffdb6c7e.png"/><br/>
-<i>See you there!</i>
+<img width="50%" alt="closing ceremony screenshot" src="https://cdn.modrinth.com/data/QxJj1BWR/images/36c66e351c2784aa123927b838e4e2124c1073de.png"/><br/>
+<i>See you next year?</i>
 </center>
 
 ---
@@ -50,10 +48,6 @@ BlanketCon '25 takes place entirely within modded Minecraft. Download the pack [
 Modders: **read our [BlanketCon Participation Guide](/pages/bcguide) for more info on what you can submit and what to expect.**
 
 ---
-
-# Recordings
-
-A playlist of video recordings of BlanketCon '25 is available [on YouTube](https://www.youtube.com/playlist?list=PLpa8FqWIBhBrXtoHiTWjC3qrMKXbfikdH) - huge thanks to everyone who recorded these!
 
 ## World Theme
 
