feat: Janky as hell soundtrack-in-event-pages system

--- a/static/assets/pages/event/bc25.md
+++ b/static/assets/pages/event/bc25.md
@@ -1,16 +1,54 @@
 ## What is BlanketCon?
 
-**BlanketCon is a collaborative event celebrating the art of Minecraft modding!**
+**BlanketCon is a collaborative event celebrating the art of Minecraft
+modding!**
 
-At BlanketCon, members of the modding community came together to create a themed world full of booths that showcase their current modding projects, and signed up to host talks and panels to share their expertise.
+At BlanketCon, members of the modding community came together to create a themed
+world full of booths that showcase their current modding projects, and signed up
+to host talks and panels to share their expertise.
 
-We are **open!** Visitors can explore the world with friends, try out mods, attend interesting events, or just hang out!
+We are **open!** Visitors can explore the world with friends, try out mods,
+attend interesting events, or just hang out!
 
 ---
 
 ## Recordings
 
-A playlist of video recordings of BlanketCon '25 is available [on YouTube](https://www.youtube.com/playlist?list=PLpa8FqWIBhBrXtoHiTWjC3qrMKXbfikdH) - with thanks to our A/V volunteers!
+A playlist of video recordings of BlanketCon '25 is available
+[on YouTube](https://www.youtube.com/playlist?list=PLpa8FqWIBhBrXtoHiTWjC3qrMKXbfikdH) -
+with thanks to our A/V volunteers!
+
+---
+
+#SOUNDTRACK
+#SOUNDTRACKTITLE{BlanketCon_'25:_Volcano_Island_(Official_Modpack_Soundtrack)}
+#SOUNDTRACKCOLOUR{#0d5192} #SOUNDTRACKCOVER{/assets/music/cover-bc25.png}
+#SOUNDTRACKBANDCAMP{https://modfest.bandcamp.com/album/blanketcon-25-volcano-island-official-modpack-soundtrack}
+#SOUNDTRACKSPOTIFY{https://open.spotify.com/album/4qYsYthD94XGE0XyIGxTll}
+#SOUNDTRACKAPPLEMUSIC{https://music.apple.com/album/blanketcon-25-volcano-island-official-modpack-soundtrack/1809688141}
+
+## Original Soundtrack
+
+BlanketCon '25 is the second ModFest event to boast a full-length original
+soundtrack!
+
+#SOUNDTRACKSLOT
+
+### This event's sound team is:
+
+- Deltarisk
+- erora
+- Nulb
+- MerchantCalico
+- WorldWidePixel
+- Superkat32
+
+### With cover art by:
+
+- Nulb
+- hama
+- Szedann
+- Wishi
 
 ---
 
@@ -19,10 +57,14 @@ A playlist of video recordings of BlanketCon '25 is available [on YouTube](https
 <center><img alt="world preview" src="https://cdn.modrinth.com/data/QxJj1BWR/images/26eebc33bf8e8a6e0dd3323dba509b5c2e81da79.jpeg" /></center>
 
 **Key Features**:
-- Check out 234 convention "booths" built to show off mods, modpacks, and other modding projects!
-- Explore a vibrant island of castaways that mysteriously migrates across the ocean...
+
+- Check out 234 convention "booths" built to show off mods, modpacks, and other
+  modding projects!
+- Explore a vibrant island of castaways that mysteriously migrates across the
+  ocean...
 - Traverse the map by train, car, skates, stopwatches, and much, much more!
-- Find and earn 388 collectible "shards", tracking booth visits, hidden secrets, and tricky challenges!
+- Find and earn 388 collectible "shards", tracking booth visits, hidden secrets,
+  and tricky challenges!
 - Put sunglasses on a pineapple! (huh?)
 
 <center>
@@ -35,7 +77,7 @@ A playlist of video recordings of BlanketCon '25 is available [on YouTube](https
 ## Event Details
 
 |                      |                                                                       |
-|----------------------|-----------------------------------------------------------------------|
+| -------------------- | --------------------------------------------------------------------- |
 | Modpack Platform     | Fabric 1.21.1                                                         |
 | Convention World     | Volcano Island National Park (WorldPainter)                           |
 | Signups Open         | Saturday, Mar 1st, 2025 @ 00:00GMT                                    |
@@ -45,7 +87,8 @@ A playlist of video recordings of BlanketCon '25 is available [on YouTube](https
 | Who Can Participate? | **Modding project authors,<br/>aspiring talk/panel hosts, and more!** |
 | Who Can Attend?      | **Everyone!**                                                         |
 
-Modders: **read our [BlanketCon Participation Guide](/pages/bcguide) for more info on what you can submit and what to expect.**
+Modders: **read our [BlanketCon Participation Guide](/pages/bcguide) for more
+info on what you can submit and what to expect.**
 
 ---
 
@@ -55,10 +98,20 @@ Modders: **read our [BlanketCon Participation Guide](/pages/bcguide) for more in
 
 <img alt="map" src="/assets/event/bc25/map.png" width="50%"/>
 
-*Located in the subtropics, I mean, the tropics? Blast it, let me start again. Volcano Island appears to drift across the ocean all on its own. Inhabited by the descendants of unlucky castaways and frequented for its surf season, the island is classified for conservation in most of the jurisdictions it's wandered into.*
+_Located in the subtropics, I mean, the tropics? Blast it, let me start again.
+Volcano Island appears to drift across the ocean all on its own. Inhabited by
+the descendants of unlucky castaways and frequented for its surf season, the
+island is classified for conservation in most of the jurisdictions it's wandered
+into._
 
-*Navigating these complex bylaws, the locals - the lake-loving flamingos, the fruit-like ananas, and the geckos endemic to the island's volcano  - have built stores, workshops, communal residences, and even a seaside town.*
+_Navigating these complex bylaws, the locals - the lake-loving flamingos, the
+fruit-like ananas, and the geckos endemic to the island's volcano - have built
+stores, workshops, communal residences, and even a seaside town._
 
-*My pals from Rustport make trades there, in supplies. Supposedly there's this "grand opening" coming soon. Something really special, that only happens every quarter-century. So hey, why don't you and me hitch a ride?*
+_My pals from Rustport make trades there, in supplies. Supposedly there's this
+"grand opening" coming soon. Something really special, that only happens every
+quarter-century. So hey, why don't you and me hitch a ride?_
 
-*Maybe we can finally solve the mystery of this place. You know - why it moves? See, the geckos have lived there longest, and apparently they tell a tale of a great turtle; one that's contently carrying an entire island on its back.*
+_Maybe we can finally solve the mystery of this place. You know - why it moves?
+See, the geckos have lived there longest, and apparently they tell a tale of a
+great turtle; one that's contently carrying an entire island on its back._
