smashy up the guide (still ugly)

--- a/static/assets/pages/event/1.21.md
+++ b/static/assets/pages/event/1.21.md
@@ -73,7 +73,7 @@ modpack download, available above.
 
 <!-- **Participant registration is open! Join the [discord](https://discord.gg/gn543Ee) and click the button if you'd like to make and submit a mod! -->
 
-<!-- For information on how participating works, requirements for submissions and builds, and an FAQ, check out the [Participant Guide](https://hackmd.io/T-diveUWQrC4MFwq_XvUUQ) -->
+<!-- For information on how participating works, requirements for submissions and builds, and an FAQ, check out the [Participant Guide](/pages/modfest) -->
 
 ---
 
