--- a/static/assets/pages/event/bc25.md
+++ b/static/assets/pages/event/bc25.md
@@ -87,7 +87,7 @@ soundtrack!
 | Who Can Participate? | **Modding project authors,<br/>aspiring talk/panel hosts, and more!** |
 | Who Can Attend?      | **Everyone!**                                                         |
 
-Modders: **read our [BlanketCon Participation Guide](/pages/bcguide) for more
+Modders: **read our [BlanketCon Participation Guide](/pages/blanketcon) for more
 info on what you can submit and what to expect.**
 
 ---
