--- a/static/assets/pages/event/bc25.md
+++ b/static/assets/pages/event/bc25.md
@@ -36,11 +36,10 @@ soundtrack!
 
 ### This event's sound team is:
 
-- Deltarisk
-- erora
-- Nulb
-- MerchantCalico
+- Nulb / Deltarisk
 - WorldWidePixel
+- erora
+- MerchantCalico
 - Superkat32
 
 ### With cover art by:
