--- a/static/assets/pages/event/bc25.md
+++ b/static/assets/pages/event/bc25.md
@@ -37,7 +37,7 @@ soundtrack!
 ### This event's sound team is:
 
 - Nulb / Deltarisk
-- WorldWidePixel
+- lynndova
 - erora
 - MerchantCalico
 - Superkat32
